Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39390

Editing QTableWidget items on iOS not bringing up keyboard

XMLWordPrintable

    • iOS/tvOS/watchOS

      Items in a QTableWidget cannot be edited on iOS as the keyboard does not appear.

      The issue can be seen in the cachedtable and frozencolumn examples.

      Double tap on an item in the table to edit it, the item text is momentarily highlighted in blue with the rest of the item in white and then it reverts to the whole item highlighted in blue again. The iOS keyboard does not appear.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            tinraven Niall Fraser
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes